--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint –-fix",
-      "prettier –-write",
+      "prettier --write",
+      "eslint --fix",
       "git add"
     ]
   }
