--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -17,18 +18,23 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "draft-js": "^0.11.7",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.10",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.0",
+    "next-sitemap": "^3.1.44",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "prisma": "^4.8.1",
